
2008-02-02 Roland Riegel <feedback@roland-riegel.de>

	* Abort configure script if ncurses is not found

	* Rewrite the linux proc devreader

	* Implement hpux device detection

	* Implement reading and writing of config files (fixes debian bug #247030)

	* Add F5 and F6 key shortcuts for reading and writing current settings

	* Change defaults for traffic units to human readable

	* Make shown devices configurable at run time and save this setting as well

	* Remove "-t 0"

	* Change key shortcuts, especially F2 for the option window

	* Replace "average smoothness" by average window period in seconds

	* Apply patch by Paul Brook <paul@nowt.org> so that nload works correctly on 64-bit kernels

	* Fix SIGSEGV when /proc/net/dev doesn't exist

	* Make compilation work with GCC 4.3 (fixes debian bug #417449)

	* Tag 0.7.0 release

2003-12-18 Roland Riegel <feedback@roland-riegel.de>

	* Ported to HP-UX (thanks to Roshan Sequeira)

	* Added some useful key shortcuts

	* Fixed some memory leaks (also on BSD), uninitialized variables

	* Fixed compilation with gcc 3.x

	* Source code cleanup

	* Tagged 0.6.0 release

2002-08-11 Roland Riegel <feedback@roland-riegel.de>

	* New option window (via the 'o' key) to change program settings at run time

	* Display IP numbers of the devices

	* Faster keyboard reaction

	* "Real" average calculation

	* Big code reorganisation

	* New nload-user mailing list (see README)

	* Tagged 0.5.0 release

2001-12-06 Roland Riegel <feedback@roland-riegel.de>

	* Ported to Free/Net/OpenBSD and Solaris

	* Switches -u and -U for customizable data units

	* Tripled graph resolution by adding two additional drawing chars (thanks to Christian Hoenig)

	* Fixed wrong data display after network device restart (thanks to Christian Hoenig)

	* Tagged 0.4.0 release

2001-10-20 Roland Riegel <feedback@roland-riegel.de>

	* Now the 4GB workaround really works

	* Tagged 0.3.2 release

2001-10-17 Roland Riegel <feedback@roland-riegel.de>
